Implement get author API