@@ -1,9 +1,10 @@
 package io.citegraph.app;
 
 import io.citegraph.app.model.AuthorResponse;
-import io.citegraph.data.DblpParser;
-import org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal;
+import io.citegraph.app.model.CitationResponse;
+import io.citegraph.app.model.PaperResponse;
 import org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversalSource;
+import org.apache.tinkerpop.gremlin.structure.Edge;
 import org.apache.tinkerpop.gremlin.structure.Vertex;
 import org.janusgraph.core.JanusGraph;
 import org.janusgraph.core.attribute.Text;
@@ -18,7 +19,11 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.server.ResponseStatusException;
 
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/")
@@ -28,6 +33,10 @@ public class GraphController {
     @Autowired
     private JanusGraph graph;
 
+    /**
+     * @param id
+     * @return
+     */
     @CrossOrigin
     @GetMapping("/author/{id}")
     public AuthorResponse getAuthor(@PathVariable String id) {
@@ -39,10 +48,41 @@ public class GraphController {
         }
         Vertex author = g.V().hasId(id).next();
         String name = (String) g.V(author).values("name").next();
-        List<Vertex> papers = g.V(author).out("writes").toList();
-        List<Vertex> referees = g.V(author).out("refers").toList();
-        List<Vertex> referers = g.V(author).in("refers").toList();
+
+        // collect papers
+        List<PaperResponse> papers = g.V(author).out("writes").toList()
+            .stream()
+            .map(v -> new PaperResponse((String) v.id(), v.value("title"), v.value("year")))
+            .collect(Collectors.toList());
+
+        // collect author references
+        Map<String, String> idNameMap = new HashMap<>();
+        buildNameMap(idNameMap, g.V(author).both("refers").toList());
+
+        List<Edge> referees = g.V(author).outE("refers").toList();
+        List<CitationResponse> refereeResponse = new ArrayList<>();
+        for (Edge referee : referees) {
+            int refCount = referee.value("refCount");
+            String refereeId = (String) referee.inVertex().id();
+            String refereeName = idNameMap.get(refereeId);
+            CitationResponse citationResponse = new CitationResponse(new AuthorResponse(refereeName, refereeId), refCount);
+            refereeResponse.add(citationResponse);
+        }
+
+        List<Edge> referers = g.V(author).inE("refers").toList();
+        List<CitationResponse> refererResponse = new ArrayList<>();
+        for (Edge referer : referers) {
+            int refCount = referer.value("refCount");
+            String refererId = (String) referer.outVertex().id();
+            String refererName = idNameMap.get(refererId);
+            CitationResponse citationResponse = new CitationResponse(new AuthorResponse(refererName, refererId), refCount);
+            refererResponse.add(citationResponse);
+        }
+
         AuthorResponse res = new AuthorResponse(name, id, papers.size(), referees.size(), referers.size());
+        res.setPapers(papers);
+        res.setReferees(refereeResponse);
+        res.setReferers(refererResponse);
         return res;
     }
 
@@ -58,5 +98,11 @@ public class GraphController {
             return null;
         }
         return getAuthor((String) ids.get(0));
+    }
+
+    private void buildNameMap(Map<String, String> idNameMap, List<Vertex> authors) {
+        for (Vertex v : authors) {
+            idNameMap.putIfAbsent((String) v.id(), v.value("name"));
+        }
     }
 }
